--- a/index.html
+++ b/index.html
@@ -829,7 +829,7 @@
       <!-- Why Choose us? -->
 
       <section class="mb-20">
-        <div class="mx-48 mb-7">
+        <div class="lg:mx-48 mb-7">
           <h1
             class="text-3xl text-center lg:text-5xl text-texts font-semibold mb-5"
           >
