--- a/index.html
+++ b/index.html
@@ -235,13 +235,15 @@
       <!-- Deal Of the day -->
       <section class="my-20">
         <!-- Header -->
-        <div class="flex flex-col md:flex-row justify-between items-center">
+        <div class="flex flex-col lg:flex-row justify-between items-center">
           <!-- Text -->
-          <div class="w-full md:w-[50%]">
+          <div
+            class="w-full lg:w-[50%] mb-5 lg:mb-0 flex flex-col justify-center items-center lg:items-start lg:justify-start"
+          >
             <h1 class="text-texts text-3xl lg:text-5xl font-bold mb-5">
               Deal of the day
             </h1>
-            <p>
+            <p class="text-center lg:text-start px-10 lg:px-0">
               Contrary to popular belief, is not simply random text. It has
               roots in a piece of classical Latin literature from 45 BC, making
               it over 2000 years old.
@@ -300,7 +302,7 @@
 
         <!-- Products -->
         <div
-          class="flex flex-col md:flex-row items-center justify-between my-16"
+          class="flex flex-col lg:flex-row items-center justify-between my-16"
         >
           <!-- card -->
           <div class="flex flex-col border p-5 items-center rounded-lg m-2">
@@ -373,7 +375,7 @@
             <dialog id="my_modal_1" class="modal">
               <form
                 method="dialog"
-                class="modal-box bg-white w-96 flex flex-col justify-center items-center"
+                class="modal-box bg-white w-52 lg:w-96 flex flex-col justify-center items-center"
               >
                 <div class="mb-5">
                   <img src="./images/fruit6.png" alt="apple" />
@@ -844,8 +846,11 @@
 
         <!-- grid -->
         <div class="grid grid-cols-1 lg:grid-cols-3 gap-5">
-          <div class="flex flex-col">
-            <div class="flex flex-row">
+          <!-- Text -->
+          <div class="order-2 lg:order-1 flex flex-col">
+            <div
+              class="flex flex-col items-center lg:items-start justify-center lg:flex-row mt-8 lg:mt-0"
+            >
               <div class="mr-3">
                 <img
                   class="w-24"
@@ -853,16 +858,20 @@
                   alt=""
                 />
               </div>
-              <div>
+              <div
+                class="flex flex-col items-center justify-center lg:items-start lg:justify-start"
+              >
                 <h1 class="text-2xl text-texts font-bold">Dedicated Team</h1>
                 <hr class="w-24 my-2" style="border: 1px solid black" />
-                <p class="text-textp">
+                <p class="text-textp text-center lg:text-start lg:px-0">
                   Professional employees are there for you most amazing and
                   fresh fruits.
                 </p>
               </div>
             </div>
-            <div class="flex flex-row">
+            <div
+              class="flex flex-col items-center lg:items-start justify-center lg:flex-row mt-8 lg:mt-0"
+            >
               <div class="mr-3">
                 <img
                   class="w-24"
@@ -870,16 +879,20 @@
                   alt=""
                 />
               </div>
-              <div>
+              <div
+                class="flex flex-col items-center justify-center lg:items-start lg:justify-start"
+              >
                 <h1 class="text-2xl text-texts font-bold">Fresh is Best</h1>
                 <hr class="w-24 my-2" style="border: 1px solid black" />
-                <p class="text-textp">
+                <p class="text-textp text-center lg:text-start px-10 lg:px-0">
                   Professional employees are there for you most amazing and
                   fresh fruits.
                 </p>
               </div>
             </div>
-            <div class="flex flex-row">
+            <div
+              class="flex flex-col items-center lg:items-start justify-center lg:flex-row mt-8 lg:mt-0"
+            >
               <div class="mr-3">
                 <img
                   class="w-24"
@@ -887,10 +900,12 @@
                   alt=""
                 />
               </div>
-              <div>
+              <div
+                class="flex flex-col items-center justify-center lg:items-start lg:justify-start"
+              >
                 <h1 class="text-2xl text-texts font-bold">Dedicated Team</h1>
                 <hr class="w-24 my-2" style="border: 1px solid black" />
-                <p class="text-textp">
+                <p class="text-textp text-center lg:text-start px-10 lg:px-0">
                   Professional employees are there the most amazing and fresh
                   fruits.
                 </p>
@@ -899,13 +914,15 @@
           </div>
 
           <!-- image -->
-          <div class="">
+          <div class="order-1 lg:order-2">
             <img class="w-[100%]" src="./images/whychoose1.png" alt="" />
           </div>
 
           <!-- text -->
-          <div class="flex flex-col">
-            <div class="flex flex-row-reverse justify-end">
+          <div class="order-3 flex flex-col">
+            <div
+              class="flex flex-col items-center lg:items-start lg:flex-row-reverse lg:justify-end mt-8"
+            >
               <div class="ml-3">
                 <img
                   class="w-24"
@@ -913,18 +930,20 @@
                   alt=""
                 />
               </div>
-              <div class="flex flex-col items-end">
+              <div class="flex flex-col items-center lg:items-end">
                 <h1 class="text-2xl text-texts font-bold text-end">
                   Integrated Suplier
                 </h1>
                 <hr class="w-24 my-2" style="border: 1px solid black" />
-                <p class="text-textp text-end">
+                <p class="text-textp text-center lg:text-end lg:px-0 px-8">
                   Professional employees are there for you most amazing and
                   fresh fruits.
                 </p>
               </div>
             </div>
-            <div class="flex flex-row-reverse justify-end">
+            <div
+              class="flex flex-col items-center lg:items-start lg:flex-row-reverse lg:justify-end mt-8"
+            >
               <div class="ml-3">
                 <img
                   class="w-24"
@@ -932,18 +951,20 @@
                   alt=""
                 />
               </div>
-              <div class="flex flex-col items-end">
+              <div class="flex flex-col items-center lg:items-end">
                 <h1 class="text-2xl text-texts font-bold text-end">
                   Sustainable Practice
                 </h1>
                 <hr class="w-24 my-2" style="border: 1px solid black" />
-                <p class="text-textp text-end">
+                <p class="text-textp text-center lg:text-end px-8 lg:px-0">
                   Professional employees are there for you most amazing and
                   fresh fruits.
                 </p>
               </div>
             </div>
-            <div class="flex flex-row-reverse justify-end">
+            <div
+              class="flex flex-col items-center lg:items-start lg:flex-row-reverse lg:justify-end mt-8"
+            >
               <div class="ml-3">
                 <img
                   class="w-24"
@@ -951,12 +972,16 @@
                   alt=""
                 />
               </div>
-              <div class="flex flex-col items-end">
-                <h1 class="text-2xl text-texts font-bold text-end">
+              <div
+                class="flex flex-col items-center justify-center lg:items-end"
+              >
+                <h1
+                  class="text-2xl text-texts font-bold text-center lg:text-end"
+                >
                   The Benefits Only
                 </h1>
                 <hr class="w-24 my-2" style="border: 1px solid black" />
-                <p class="text-textp text-end">
+                <p class="text-textp text-center px-10 lg:px-0 lg:text-end">
                   Professional employees are there for you most amazing and
                   fresh fruits.
                 </p>
@@ -966,10 +991,12 @@
         </div>
       </section>
     </main>
-    <footer class="footer footer-center p-10 bg-base-200 text-base-content">
+    <footer class="footer footer-center p-10 bg-texts text-base-content">
       <img src="./images/utils/Group 2 white.png" alt="" />
       <div class="nav">
-        <ul class="flex flex-row flex-wrap text-center">
+        <ul
+          class="flex flex-row flex-wrap text-center justify-center items-center"
+        >
           <li class="mx-2 cursor-pointer">Home</li>
           <li class="mx-2 cursor-pointer">About Us</li>
           <li class="mx-2 cursor-pointer">Shop</li>
@@ -980,22 +1007,34 @@
       </div>
       <div class="flex flex-row justify-center items-center flex-wrap">
         <a href="tweeter.com"
-          ><img src="./images/utils/Group 47.png" alt="tweet"
+          ><img class="h-8 m-1" src="./images/utils/Group 47.png" alt="tweet"
         /></a>
         <a href="fb.com">
-          <img src="./images/utils/Group 48.png" alt="fb" />
+          <img class="h-8 m-1" src="./images/utils/Group 48.png" alt="fb" />
         </a>
         <a href="/youtube.com"
-          ><img src="./images/utils/Group 49 (1).png" alt="youtube" />
+          ><img
+            class="h-8 m-1"
+            src="./images/utils/Group 49 (1).png"
+            alt="youtube"
+          />
         </a>
         <a href="linkedin.com"
-          ><img src="./images/utils/Group 50 (1).png" alt="linkedin" />
+          ><img
+            class="h-8 m-1"
+            src="./images/utils/Group 50 (1).png"
+            alt="linkedin"
+          />
         </a>
         <a href="apple.com"
-          ><img src="./images/utils/Group 52.png" alt="apple" />
+          ><img class="h-8 m-1" src="./images/utils/Group 52.png" alt="apple" />
         </a>
         <a href="instagram.com"
-          ><img src="./images/utils/instagram 1.png" alt="instagram" />
+          ><img
+            class="h-8 m-1"
+            src="./images/utils/instagram 1.png"
+            alt="instagram"
+          />
         </a>
       </div>
     </footer>
