ensure responsive ness

--- a/index.html
+++ b/index.html
@@ -995,7 +995,7 @@
       <img src="./images/utils/Group 2 white.png" alt="" />
       <div class="nav">
         <ul
-          class="flex flex-row flex-wrap text-center justify-center items-center"
+          class="flex flex-row flex-wrap text-center justify-center items-center text-white"
         >
           <li class="mx-2 cursor-pointer">Home</li>
           <li class="mx-2 cursor-pointer">About Us</li>
