ensure responsive ness

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
         <!-- Overlay fruits -->
         <div
-          class="hidden lg:flex flex-row justify-between shadow-lg px-5 py-4 mx-16 -translate-y-"
+          class="hidden lg:flex flex-row justify-between shadow-lg px-5 py-4 mx-16 -translate-y-32s"
         >
           <div class="flex flex-col justify-center items-center text-textp">
             <img src="./images/fruit1.png" alt="" />
@@ -243,7 +243,7 @@
             <h1 class="text-texts text-3xl lg:text-5xl font-bold mb-5">
               Deal of the day
             </h1>
-            <p class="text-center lg:text-start px-10 lg:px-0">
+            <p class="text-center lg:text-start px-10 lg:px-0 text-textp">
               Contrary to popular belief, is not simply random text. It has
               roots in a piece of classical Latin literature from 45 BC, making
               it over 2000 years old.
@@ -921,7 +921,7 @@
           <!-- text -->
           <div class="order-3 flex flex-col">
             <div
-              class="flex flex-col items-center lg:items-start lg:flex-row-reverse lg:justify-end mt-8"
+              class="flex flex-col items-center lg:items-start lg:flex-row-reverse lg:justify-end mt-8 lg:mt-0"
             >
               <div class="ml-3">
                 <img
@@ -942,7 +942,7 @@
               </div>
             </div>
             <div
-              class="flex flex-col items-center lg:items-start lg:flex-row-reverse lg:justify-end mt-8"
+              class="flex flex-col items-center lg:items-start lg:flex-row-reverse lg:justify-end mt-8 lg:mt-0"
             >
               <div class="ml-3">
                 <img
@@ -963,7 +963,7 @@
               </div>
             </div>
             <div
-              class="flex flex-col items-center lg:items-start lg:flex-row-reverse lg:justify-end mt-8"
+              class="flex flex-col items-center lg:items-start lg:flex-row-reverse lg:justify-end mt-8 lg:mt-0"
             >
               <div class="ml-3">
                 <img
