--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
     <main class="lg:px-32 px-6">
       <!-- Hero Section -->
-      <section>
+      <section class="text-white">
         <div class="carousel w-full">
           <div id="slide1" class="carousel-item relative w-full">
             <div
@@ -106,7 +106,9 @@
                   <h1 class="mb-5 text-5xl text-white font-bold">
                     Exotic tastes at your doorstep
                   </h1>
-                  <p class="mb-5">We supply highly quality organic products</p>
+                  <p class="mb-5 text-white">
+                    We supply highly quality organic products
+                  </p>
                   <button
                     class="btn bg-bgp border-none hover:bg-bgp text-white"
                   >
@@ -133,7 +135,9 @@
                   <h1 class="mb-5 text-5xl text-white font-bold">
                     Exotic tastes at your doorstep
                   </h1>
-                  <p class="mb-5">We supply highly quality organic products</p>
+                  <p class="mb-5 text-white">
+                    We supply highly quality organic products
+                  </p>
                   <button
                     class="btn bg-bgp border-none hover:bg-bgp text-white"
                   >
@@ -160,7 +164,9 @@
                   <h1 class="mb-5 text-5xl text-white font-bold">
                     Exotic tastes at your doorstep
                   </h1>
-                  <p class="mb-5">We supply highly quality organic products</p>
+                  <p class="mb-5 text-white">
+                    We supply highly quality organic products
+                  </p>
                   <button
                     class="btn bg-bgp border-none hover:bg-bgp text-white"
                   >
@@ -187,7 +193,9 @@
                   <h1 class="mb-5 text-5xl text-white font-bold">
                     Exotic tastes at your doorstep
                   </h1>
-                  <p class="mb-5">We supply highly quality organic products</p>
+                  <p class="mb-5 text-white">
+                    We supply highly quality organic products
+                  </p>
                   <button
                     class="btn bg-bgp border-none hover:bg-bgp text-white"
                   >
@@ -207,7 +215,7 @@
 
         <!-- Overlay fruits -->
         <div
-          class="hidden lg:flex flex-row justify-between shadow-lg px-5 py-4 mx-16 -translate-y-32s"
+          class="hidden lg:flex flex-row justify-between shadow-lg px-5 py-4 mx-16 -translate-y-10"
         >
           <div class="flex flex-col justify-center items-center text-textp">
             <img src="./images/fruit1.png" alt="" />
